tests/invalid/sintaxis_workflow_vacio.flow
// EXPECT: E201
workflow demo {
    var a : bool
}
